[coffee][Cuong][Order]Update layout

--- a/coffee_project/src/main/resources/templates/oder/chart.html
+++ b/coffee_project/src/main/resources/templates/oder/chart.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Biểu đồ lịch sử doanh thu</title>
-    <link rel="shortcut icon" href="/static/healthy_drink-1_4x.png" th:href="@{/healthy_drink-1_4x.png}">
+    <link rel="shortcut icon" href="/static/android-chrome-512x512.png" th:href="@{/android-chrome-512x512.png}">
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <style th:insert="/layout::style"></style>
     <link rel="stylesheet" th:href="@{/bootstrap-5.0.2-dist/css/bootstrap.css}"
