--- a/coffee_project/src/main/resources/templates/layout.html
+++ b/coffee_project/src/main/resources/templates/layout.html
@@ -3,7 +3,6 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-
     <link rel="stylesheet"
           href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
     <style th:fragment="style">
@@ -21,6 +20,9 @@
 
         }
 
+        .side-bar {
+            background-image: linear-gradient(20deg, #eeeeee, black);
+        }
     </style>
     <link rel="stylesheet" href="../static/bootstrap-5.0.2-dist/css/bootstrap.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
@@ -34,16 +36,16 @@
         <!--        ≥768px	lg-->
         <!--        ≥992px	xl-->
         <!--        ≥1200px	xxl-->
-        <div class="col-2 col-sm-3 col-md-3 col-lg-2 px-sm-2 px-0 bg-dark" th:fragment="side-bar">
+        <div class="side-bar col-2 col-sm-3 col-md-3 col-lg-2 px-sm-2 px-0" th:fragment="side-bar">
             <div class="d-flex flex-column align-items-center align-items-sm-start px-0 pt-2 text-white min-vh-100">
                 <a href="/order/"
-                   class="d-flex align-items-center pb-3 mb-md-0 me-md-auto text-white text-decoration-none">
-                    <img class="fs-5 d-none d-sm-inline w-100 h-100" src="/static/healthy_drink-1_4x.png"
-                         th:src="@{/healthy_drink-1_4x.png}"/>
+                   class="d-flex justify-content-center align-items-center pb-3 mb-md-0 me-md-auto text-white text-decoration-none">
+                    <img class="fs-5 d-none d-sm-inline w-50 h-50" src="/static/healthy_drink-1_4x(2).png"
+                         th:src="@{/healthy_drink-1_4x(2).png}"/>
                 </a>
                 <ul class="nav nav-pills flex-column mb-sm-auto mb-0 align-items-center align-items-sm-start "
                     id="menu">
-                    <li class="nav-item w-100" >
+                    <li class="nav-item w-100">
                         <a href="/order/" class="nav-link align-middle px-0 text-light">
                             <i class="fa-solid fa-file-pen" style="color: #ffffff;"></i><span
                                 class="ms-1 d-none d-sm-inline">Đặt sản phẩm</span>
@@ -119,7 +121,7 @@
                                     <i class="fa-regular fa-user" style="color: #ffffff;"></i>
                                 </button>
                                 <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="dropdownMenuButton1">
-                                    <li><a class="dropdown-item" href="/user/update-form">Thông tin</a></li>
+                                    <li><a class="dropdown-item" href="/user/update-form">Sửa thông tin</a></li>
                                     <li><a class="dropdown-item" href="/account/change-password">Đổi mật khẩu</a></li>
                                     <li><a class="dropdown-item" href="/account/logout">Đăng xuất</a></li>
                                 </ul>
