--- a/coffee_project/src/main/resources/templates/account/list-account.html
+++ b/coffee_project/src/main/resources/templates/account/list-account.html
@@ -4,7 +4,7 @@
     <title>Quản Lý Tài Khoản</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="shortcut icon" href="/static/healthy_drink-1_4x.png" th:href="@{/healthy_drink-1_4x.png}">
+    <link rel="shortcut icon" href="/static/android-chrome-512x512.png" th:href="@{/android-chrome-512x512.png}">
     <style th:replace="/layout::style"></style>
     <link rel="stylesheet"
           href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
@@ -22,7 +22,7 @@
             <div class="row min-vh-100 content">
                 <div class="col-12">
                     <div class="row">
-                        <h1 style="text-align: center">Quản Lý Tài Khoản</h1>
+                        <h1 style="text-align: center;margin-top: 2rem">Quản Lý Tài Khoản</h1>
                         <!--                    //     search-->
                         <form th:action="@{/account/admin}" th:method="get">
                             <label style="float: right">
