--- a/coffee_project/src/main/resources/templates/user/new-employee.html
+++ b/coffee_project/src/main/resources/templates/user/new-employee.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Danh sách nhân viên mới </title>
     <style th:insert="/layout::style"></style>
-    <link rel="shortcut icon" href="/static/healthy_drink-1_4x.png" th:href="@{/healthy_drink-1_4x.png}">
+    <link rel="shortcut icon" href="/static/android-chrome-512x512.png" th:href="@{/android-chrome-512x512.png}">
     <link rel="stylesheet" th:href="@{/bootstrap-5.0.2-dist/css/bootstrap.css}"
           href="../static/bootstrap-5.0.2-dist/css/bootstrap.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
