--- a/coffee_project/src/main/resources/templates/accuracy.html
+++ b/coffee_project/src/main/resources/templates/accuracy.html
@@ -4,7 +4,7 @@
     <title>Đặt lại mật khẩu</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="shortcut icon" href="/static/android-chrome-512x512.png" th:href="@{/android-chrome-512x512.png}">
+    <link rel="shortcut icon" href="/static/healthy_drink-1_4x.png" th:href="@{/healthy_drink-1_4x.png}">
 
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700&display=swap" rel="stylesheet">
 
@@ -63,6 +63,11 @@
                              <div class="form-group mb-3">
                                 <label for="emailCode">Nhập mã từ email</label>
                                 <input type="text" name="emailCode" id="emailCode" class="form-control" required>
+                            </div>
+                            <div style="height: 40px">
+                                <div th:text="${msg}"
+                                     style="color: red;margin: 10px 0">
+                                </div>
                             </div>
                             <input type="text" th:value="${code}" name="code" hidden="hidden">
                             <div class="form-group">
