--- a/coffee_project/src/main/resources/templates/login.html
+++ b/coffee_project/src/main/resources/templates/login.html
@@ -78,7 +78,7 @@
                                         <span class="checkmark"></span>
                                     </label>
                                 </div>
-                                <div  class="w-50 text-md-right">
+                                <div>
                                     <a href="/account/forgot-password">Quên mật khẩu ?</a>
                                 </div>
                             </div>
