--- a/coffee_project/src/main/resources/templates/product/create.html
+++ b/coffee_project/src/main/resources/templates/product/create.html
@@ -30,6 +30,8 @@
         }
     </style>
     <style th:insert="/layout::style"></style>
+    <link rel="shortcut icon" href="/static/android-chrome-512x512.png" th:href="@{/android-chrome-512x512.png}">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
     <link rel="stylesheet" th:href="@{/bootstrap-5.0.2-dist/css/bootstrap.css}"
           href="../static/bootstrap-5.0.2-dist/css/bootstrap.css">
 </head>
@@ -43,7 +45,12 @@
             </div>
             <div class="row min-vh-100 content">
                 <div class="col-12">
-                    <h1 style="text-align: center">Thêm Mới Sản Phẩm</h1>
+                    <h1  style="text-align: center; margin-top: 2rem">Thêm Mới Sản Phẩm</h1>
+                    <a class="col-1 mt-2" style="text-decoration: none" href="/product">
+                        <button title="Quay lại"
+                                class="btn btn-primary">
+                            <i class="fa-solid fa-circle-arrow-left"></i></button>
+                    </a>
                     <div class="container">
                         <form action="/product/create" method="post" th:object="${product}">
                             <div style="display: inline-flex;">
@@ -123,10 +130,10 @@
                                             </div>
                                         </div>
                                         <div class="form-group">
-                                            <button type="submit" class="btn btn-primary">Thêm mới</button>
-                                            <a style="color: white" href="/product">
-                                                <button type="button" class="btn btn-secondary">Quay lại</button>
-                                            </a>
+                                            <button style="width: 100%;" type="submit" class="btn btn-primary">Thêm mới</button>
+<!--                                            <a style="color: white" href="/product">-->
+<!--                                                <button type="button" class="btn btn-secondary">Quay lại</button>-->
+<!--                                            </a>-->
                                         </div>
                                     </div>
                                 </div>
