--- a/coffee_project/src/main/resources/templates/product/edit.html
+++ b/coffee_project/src/main/resources/templates/product/edit.html
@@ -36,6 +36,8 @@
             }
         }
     </style>
+    <link rel="shortcut icon" href="/static/android-chrome-512x512.png" th:href="@{/android-chrome-512x512.png}">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
     <style th:insert="/layout::style"></style>
     <link rel="stylesheet" th:href="@{/bootstrap-5.0.2-dist/css/bootstrap.css}"
           href="../static/bootstrap-5.0.2-dist/css/bootstrap.css">
@@ -50,7 +52,12 @@
             </div>
             <div class="row min-vh-100 content">
                 <div class="col-12">
-                    <h1 style="text-align: center">Cập Nhật Sản Phẩm </h1>
+                    <h1 style="text-align: center; margin-top: 2rem">Cập Nhật Sản Phẩm </h1>
+                    <a class="col-1 mt-2" style="text-decoration: none" href="/product">
+                        <button title="Quay lại"
+                                class="btn btn-primary">
+                            <i class="fa-solid fa-circle-arrow-left"></i></button>
+                    </a>
                     <form action="/product/edit" method="post" th:object="${product}">
                         <input type="hidden" th:field="*{productId}">
                         <div class="container">
@@ -131,10 +138,10 @@
                                             </div>
                                         </div>
                                         <div class="form-group">
-                                            <button type="submit" class="btn btn-primary">Cập nhật</button>
-                                            <a style="color: white" href="/product">
-                                                <button type="button" class="btn btn-secondary">Quay lại</button>
-                                            </a>
+                                            <button style="width: 100%;" type="submit" class="btn btn-primary">Cập nhật</button>
+<!--                                            <a style="color: white" href="/product">-->
+<!--                                                <button type="button" class="btn btn-secondary">Quay lại</button>-->
+<!--                                            </a>-->
                                         </div>
                                     </div>
                                 </div>
