--- a/coffee_project/src/main/resources/templates/product/list.html
+++ b/coffee_project/src/main/resources/templates/product/list.html
@@ -122,7 +122,8 @@
             object-fit: contain;
         }
     </style>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css">
+    <link rel="shortcut icon" href="/static/android-chrome-512x512.png" th:href="@{/android-chrome-512x512.png}">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
     <link rel="stylesheet" th:href="@{/bootstrap-5.0.2-dist/css/bootstrap.css}"
           href="../static/bootstrap-5.0.2-dist/css/bootstrap.css">
 </head>
@@ -137,6 +138,7 @@
             <div class="row min-vh-100 content">
                 <div class="col-12">
                     <h1 style="text-align: center; margin-top: 2rem">Quản Lý Sản Phẩm</h1>
+                    <br>
                     <!--                        <span th:if="${msg}!=null" th:text="${msg}" id="success"-->
                     <!--                              class="tin"-->
                     <!--                              style="float: left; background-color: rgba(97,139,234,0.87);font-size: 20px"></span>-->
